# pyrology

./: .gitignore  README.md  pyproject.toml
assets/: script.futa  test.pl
src/future_algebra/: __main__.py  engine.py  lexer.py  tokenizer.py  utils.py
src/future_algebra/engine/: lib.py  term.py
src/pyrology/: __main__.py  lexer.py  slicer_no_slicing.ipynb  utils.py
src/pyrology/engine/: core.py  interactive.py  lexer.py  lib.py  term.py
src/pyrology/engine/lexer/: __init__.py  __main__.py  rules.py  utils.py
tests/: test_engine.py  test_lexer.py  test_tokenizer.py
