[tool.poetry]
name = "pyrology"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"
packages = [{include = "pyrology", from = "src"}]
include = ["pyrology/assets/*"]

[tool.poetry.dependencies]
python = "^3.10"
pyaml = "^21.10.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
futa = "pyrology.__main__:main"
lexer = "pyrology.lexer:main"